{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 57,
  "lineage": "b9771330-e288-d68a-955c-584415d9c568",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_eip_nat_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac74a6220657576a",
            "arn": "arn:aws:ec2:us-east-1:711387106973:elastic-ip/eipalloc-0ac74a6220657576a",
            "domain": "vpc",
            "id": "eipalloc-0ac74a6220657576a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-199-61-185.compute-1.amazonaws.com",
            "public_ip": "44.199.61.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "dev_eip_nat_public"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "dev_eip_nat_public"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711387106973:internet-gateway/igw-032291e0a87659418",
            "id": "igw-032291e0a87659418",
            "owner_id": "711387106973",
            "tags": {
              "Environment": "Development",
              "Name": "dev_igw"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "dev_igw"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac74a6220657576a",
            "association_id": "eipassoc-05d4d9fcddd9a8a98",
            "connectivity_type": "public",
            "id": "nat-0c623fff7ef9be997",
            "network_interface_id": "eni-052db2fdb3d586686",
            "private_ip": "10.0.1.158",
            "public_ip": "44.199.61.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f754d9ce6eaebbeb",
            "tags": {
              "Environment": "Development",
              "Name": "gw NAT"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.dev_eip_nat_public",
            "aws_internet_gateway.gw",
            "aws_subnet.dev_subnet_public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_prv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711387106973:route-table/rtb-0b323d37b4986bf97",
            "id": "rtb-0b323d37b4986bf97",
            "owner_id": "711387106973",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c623fff7ef9be997",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "dev_route_table_prv"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "dev_route_table_prv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d327da7b32ed4613"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev_eip_nat_public",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.dev_nat_gateway",
            "aws_subnet.dev_subnet_public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711387106973:route-table/rtb-0e7ef16a2f631f7e2",
            "id": "rtb-0e7ef16a2f631f7e2",
            "owner_id": "711387106973",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032291e0a87659418",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "dev_route_table_pub"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "dev_route_table_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d327da7b32ed4613"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5f2f4239e7516e2",
            "route_table_id": "rtb-0b323d37b4986bf97",
            "subnet_id": "subnet-0d0a7c6846e31d385"
          },
          "dependencies": [
            "aws_eip.dev_eip_nat_public",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.dev_nat_gateway",
            "aws_route_table.route_prv",
            "aws_subnet.dev_subnet_private",
            "aws_subnet.dev_subnet_public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047416773b32d08b0",
            "route_table_id": "rtb-0e7ef16a2f631f7e2",
            "subnet_id": "subnet-0f754d9ce6eaebbeb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_pub",
            "aws_subnet.dev_subnet_public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711387106973:subnet/subnet-0d0a7c6846e31d385",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0a7c6846e31d385",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711387106973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "dev_subnet_private"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "dev_subnet_private"
            },
            "vpc_id": "vpc-0d327da7b32ed4613"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711387106973:subnet/subnet-0f754d9ce6eaebbeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f754d9ce6eaebbeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "711387106973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "dev_subnet_public"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "dev_subnet_public"
            },
            "vpc_id": "vpc-0d327da7b32ed4613"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711387106973:vpc/vpc-0d327da7b32ed4613",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0278c7fff66f55a",
            "default_route_table_id": "rtb-0065058fd610a9b8c",
            "default_security_group_id": "sg-0ee1f70a4d2b29478",
            "dhcp_options_id": "dopt-06d027fa015413ded",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d327da7b32ed4613",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0065058fd610a9b8c",
            "owner_id": "711387106973",
            "tags": {
              "Environment": "Development",
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}